--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,5 +3,20 @@
 
     <body theme="white">
         <%- include('./partials/nav.ejs') %>
+        <div class="mt-3"></div>
+        
+        <div class="container">
+            <h4 class="text-center fw-light">
+                Featured
+            </h4>
+            
+            <div class="row">
+                <% Object.keys(apps).forEach(key => { %>
+                    <div class="col-md">
+                        <img src="<%- apps[key].logo %>" style="width: 100%; max-height: 100%;"></img>
+                    </div>
+                <% }); %>
+            </div>
+        </div>
     </body>
 </html>
