--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,19 +4,33 @@
     <body theme="white">
         <%- include('./partials/nav.ejs') %>
         <div class="mt-3"></div>
-        
+
+        <p id="theme-text" class="h4 text-center fw-light mb-3">
+            Featured
+        </p>
+
         <div class="container">
-            <h4 class="text-center fw-light">
-                Featured
-            </h4>
-            
-            <div class="row">
+            <div class="row row-cols-1 row-cols-md-2 g-4">
                 <% Object.keys(apps).forEach(key => { %>
-                    <div class="col-md">
-                        <img src="<%- apps[key].logo %>" style="width: 100%; max-height: 100%;"></img>
+                    <div class="col">
+                        <div class="card border-0">
+                            <img src="<%- apps[key].logo %>" alt="Image not avaliable" class="card-img-top" onerror="imgError(this)" style="max-height: 100px; width: 100%; object-fit: cover;">
+                            <div class="card-body">
+                                <h5 class="card-title"><%- apps[key].name %></h5>
+                                <p class="card-text"><%- apps[key].description %></p>
+                                <a href="#" class="btn btn-primary">Download App</a>
+                                <a href="#" class="btn btn-primary">Read More</a>
+                            </div>
+                        </div>
                     </div>
                 <% }); %>
             </div>
         </div>
     </body>
 </html>
+
+<script>
+    $('img').on('error', function () {
+        $(this).attr('src', 'banner.jpg');
+    });
+</script>
