--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -34,7 +34,7 @@
 
     <body>
         <div class="text-center container position-absolute top-50 start-50 translate-middle" style="max-width: 480px; margin: auto;">
-            <img src="/polaros-bear.png" height="50" class="mb-4 text-primary stroke">
+            <img src="/images/polaros-bear.png" height="50" class="mb-4 text-primary stroke">
             <h2 class="mb-3 fw-bold text-primary">Register</h2>
     
             <form action="/api/users/register" method="POST">
