--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,6 +1,6 @@
 <html>
     <%- include('./partials/head.ejs') %>
-
+    
     <body theme="white">
         <%- include('./partials/nav.ejs') %>
         <div class="mt-3"></div>
@@ -13,13 +13,20 @@
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <% Object.keys(apps).forEach(key => { %>
                     <div class="col">
-                        <div class="card border-0">
+                        <div class="card border-0 h-100">
                             <img src="<%- apps[key].logo %>" alt="Image not avaliable" class="card-img-top" onerror="imgError(this)" style="max-height: 100px; width: 100%; object-fit: cover;">
-                            <div class="card-body">
-                                <h5 class="card-title"><%- apps[key].name %></h5>
-                                <p class="card-text"><%- apps[key].description %></p>
-                                <a href="#" class="btn btn-primary">Download App</a>
-                                <a href="#" class="btn btn-primary">Read More</a>
+                            <div class="card-body d-flex flex-column">
+                                <p class="h5 card-title fw-light"><%- apps[key].name %></p>
+                                <p class="card-text"><%- apps[key].shortDescription %></p>
+                                <div class="card-footer mt-auto border-0 p-0" style="background: transparent;">
+                                    <form action="/api/apps/<%- apps[key]._id %>/download" method="post" class="mb-0 d-inline">
+                                        <button class="btn btn-primary input-outline-0" name="type" value="download">Download App</button>
+                                    </form>
+
+                                    <form action="/api/apps/<%- apps[key]._id %>/open" method="post" class="mb-0 d-inline">
+                                        <button class="btn btn-primary input-outline-0" name="type" value="read">Read More</button>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -31,6 +38,6 @@
 
 <script>
     $('img').on('error', function () {
-        $(this).attr('src', 'banner.jpg');
+        $(this).attr('src', '/images/banner.jpg');
     });
 </script>
