--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -1,8 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary static-top">
     <div class="container">
-        <a class="navbar-brand fw-light" href="#">
-            <img src="/polaros-bear.png" height="36">
+        <a class="navbar-brand fw-light" href="/">
+            <img src="/images/polaros-bear.png" height="36">
         </a>
+        
 
         <button class="navbar-toggler border-0 input-outline-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -11,11 +12,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" aria-current="page" href="/">Home</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#featured">Featured</a>
+                    <a class="nav-link" href="/#featured">Featured</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -52,13 +53,30 @@
 
             if($('body').attr('theme') == 'dark') {
                 $('body').attr('theme', 'light');
-                $('#theme-text').css('color', 'black');
                 Cookies.set('theme', 'light');
             } else {
                 $('body').attr('theme', 'dark');
-                $('#theme-text').css('color', 'white');
                 Cookies.set('theme', 'dark');
             }
         });
+
+        $("body").contextmenu(function() {
+            return false;
+        });
+        
+        $("img").mousedown(function(e) {
+            e.preventDefault();
+        });
     });
 </script>
+
+<style>
+    @media (max-width: 991px) {
+        .dropdown-menu {background: transparent;}
+        .dropdown-menu .dropdown-item {color: white;}
+        .dropdown-menu .dropdown-item:hover {background: rgba(52, 83, 255, 0.5);}
+    }
+
+    .dropdown-menu {border: none;}
+    .dropdown-toggle::after {content: none;}
+</style>
