--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -2,11 +2,6 @@
     <%- include('./partials/head.ejs') %>
 
     <style type="text/css">
-        :root {
-            --stroke-size-positive: 1px;
-            --stroke-size-negative: -1px;
-        }
-
         body {
             background: url("https://wallpaperaccess.com/full/4578310.jpg") no-repeat fixed center;
         }
@@ -18,23 +13,11 @@
             border: 2px solid rgb(100, 111, 255);
             padding-bottom: 13px;
         }
-
-        .stroke {
-            -webkit-filter: drop-shadow(2px 2px 0 black)
-                drop-shadow(-1px 1px 0 black)
-                drop-shadow(1px -1px 0 black)
-                drop-shadow(-1px -1px 0 black);
-
-            filter: drop-shadow(var(--stroke-size-positive) var(--stroke-size-positive) 0 black)
-                    drop-shadow(var(--stroke-size-negative) var(--stroke-size-positive) 0 black)
-                    drop-shadow(var(--stroke-size-positive) var(--stroke-size-negative) 0 black)
-                    drop-shadow(var(--stroke-size-negative) var(--stroke-size-negative) 0 black);
-        }
     </style>
 
     <body>
         <div class="text-center container position-absolute top-50 start-50 translate-middle" style="max-width: 480px; margin: auto;">
-            <img src="/images/polaros-bear.png" height="50" class="mb-4 text-primary stroke">
+            <img src="/images/polaros-bear.png" height="50" class="mb-4 stroke">
             <h2 class="mb-3 fw-bold text-primary">Register</h2>
     
             <form action="/api/users/register" method="POST">
