--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,7 +3,7 @@
         <a class="navbar-brand fw-light" href="/">
             <img src="/images/polaros-bear.png" height="36">
         </a>
-        
+
 
         <button class="navbar-toggler border-0 input-outline-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,8 +25,11 @@
                     </a>
 
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="/login">Login</a></li>
-                        <li><a class="dropdown-item" href="/register">Register</a></li>
+                        <% if(user) { %>
+                            <li><a class="dropdown-item">Hello, <%- user.username %></a></li>
+                        <% } else { %>
+                            <li><a class="dropdown-item" href="/login">Login</a></li>
+                        <% } %>
                         <li><div class="dropdown-divider"></div></li>
                         <li><a class="dropdown-item" href="/post-app">Post Application</a></li>
                     </ul>
@@ -63,7 +66,7 @@
         $("body").contextmenu(function() {
             return false;
         });
-        
+
         $("img").mousedown(function(e) {
             e.preventDefault();
         });
