--- a/views/app.ejs
+++ b/views/app.ejs
@@ -24,22 +24,22 @@
                     <p class="card-subtitle text-muted"><%- app.shortDescription %></p>
                     <p class="card-text"><%- app.longDescription %></p>
                     <div class="card-footer mt-auto border-0 p-0 mb-3" style="background: transparent;">
-                        <form action="/api/apps/<%- app._id %>/download" method="post" class="mb-0 d-inline">
-                            <button class="btn btn-primary input-outline-0" name="type" value="download">Download App</button>
-                            <a href="/" class="btn btn-primary input-outline-0">Back Home</a>
-                            <input type="hidden" name="download" value="<%- app.download %>">
-                        </form>
+                        <a href="<%- app.download %>" class="btn btn-primary input-outline-0" name="type" value="download" target="_blank">Download App</a>
+                        <a href="/" class="btn btn-primary input-outline-0">Back Home</a>
+                        <input type="hidden" name="download" value="<%- app.download %>">
 
-                        <form action="/api/apps/<%- app._id %>/delete" method="post" class="mb-0 d-inline">
-                            <button class="btn btn-danger input-outline-0" name="type" value="delete">Delete App</button>
-                            <input type="hidden" name="author" value="<%- app.authorId %>">
-                        </form>
+                        <% if(user && user.polarStore.admin || user && app.author.discordId == user.discordId) { %>
+                            <form action="/api/apps/<%- app._id %>/delete" method="post" class="mb-0 d-inline">
+                                <button class="btn btn-danger input-outline-0" name="type" value="delete">Delete App</button>
+                                <input type="hidden" name="author" value="<%- app.author %>">
+                            </form>
+                        <% } %>
                     </div>
                     <p class="h5 card-title fw-light">Application Information</p>
                     <i class="fas fa-code d-inline"></i>
-                    <p class="mb-1 mt-2 card-text d-inline">App developer: <a class="fw-bold" href="/users/<%- app.authorId %>"><%- app.author %></a></p>
+                    <p class="mb-1 mt-2 card-text d-inline">App developer: <a class="fw-bold" href="/users/<%- app.author.discordId %>"><%- app.author.username %></a></p>
                     <div></div>
-                    <img src="/images/polaros-bear.png" class="stroke" height="18">
+                    <img src="/images/polaros-bear.png" height="18">
                     <p class="card-text d-inline">
                         Compatibility: <span class="fw-bold"><%- app.compatibility %></span>
                         <font style="font-size: small;" class="d-inline mb-0 text-danger">* May be compatible with other versions</font>
@@ -64,17 +64,20 @@
                     <% } else { %>
                         <% app.reviews.forEach((review) => { %>
                             <div class="container p-2 mb-2 rounded tb-black">
-                                <% if(review.authorId == app.authorId) { %>
+                                <% if(review.author.discordId == app.author.discordId) { %>
                                     <i class="fas fa-crown d-inline"></i>
                                 <% } else { %>
                                     <i class="fas fa-user-alt d-inline"></i>
                                 <% } %>
 
                                 <!-- <a href="#review-<%- review.id %>"><i class="fas fa-link tt-white"></i></a> -->
-                                <p class="mb-1 card-text d-inline"><a href="/users/<%- review.authorId %>" class="tt-white" id="review-<%- review.id %>"><%- review.author %></span></a>
+                                <p class="mb-1 card-text d-inline"><a href="/users/<%- review.author.discordId %>" class="tt-white"><%- review.author.username %></span></a>
                                 <form action="/api/apps/<%- app.id %>/reviews/<%- review.id %>/delete" method="post" class="mb-0 d-inline float-end">
-                                    <a href="#review-<%- review.id %>"><i class="fas fa-link tt-white"></i></a>
-                                    <button class="btn btn-danger input-outline-0 btn-sm m-1"><i class="fas fa-trash"></i></button>
+                                    <% if(user) { %>
+                                        <% if(user.discordId == app.author.discordId || review.author.discordId == user.discordId) { %>
+                                            <button class="btn btn-danger input-outline-0 btn-sm m-1"><i class="fas fa-trash"></i></button>
+                                        <% } %>
+                                    <% } %>
                                 </form>
 
                                 <p class="mb-1 card-text"><%- review.content %></span></p>
@@ -82,10 +85,12 @@
                         <% }); %>
                     <% } %>
 
-                    <form class="mt-3" action="/api/apps/<%- app._id %>/reviews/post" method="POST" id="postReview">
-                        <textarea placeholder="Review content" maxlength="1000" id="content" name="content" class="form-control mb-1" style="resize: none;" required></textarea>
-                        <button type="submit" class="btn btn-primary btn-block input-outline-0">Submit Review</button>
-                    </form>
+                    <% if(user) { %>
+                        <form class="mt-3" action="/api/apps/<%- app._id %>/reviews/post" method="POST" id="postReview">
+                            <textarea placeholder="Review content" maxlength="1000" id="content" name="content" class="form-control mb-1" style="resize: none;" required></textarea>
+                            <button type="submit" class="btn btn-primary btn-block input-outline-0">Submit Review</button>
+                        </form>
+                    <% } %>
                 </div>
             </div>
         </div>
