--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <html>
     <%- include('./partials/head.ejs') %>
 
-    <body theme="white">
+    <body>
         <%- include('./partials/nav.ejs') %>
         <div class="mt-3"></div>
 
@@ -9,26 +9,17 @@
             <% const hot = Object.keys(apps).reduce((_apps, curr) => _apps.likes ? (apps[curr].likes > _apps.likes ? apps[curr] : _apps) : apps[curr], {}); %>
 
             <% if(hot._id) { %>
-                <p class="h4 fw-light d-flex justify-content-center mb-3">Community's Favorite</p>
-
                 <div class="card border-0 mb-2">
                     <img src="<%- hot.logo %>" alt="Image not avaliable" class="card-img-top" onerror="imgError(this)" style="max-height: 100px; width: 100%; object-fit: cover;">
                     <div class="card-body d-flex flex-column">
                         <p class="h5 card-title fw-light"><%- hot.name %></p>
                         <p class="card-text"><%- hot.shortDescription %></p>
                         <div class="card-footer mt-auto border-0 p-0" style="background: transparent;">
-                            <form action="/api/apps/<%- hot._id %>/download" method="post" class="mb-0 d-inline">
-                                <button class="btn btn-primary input-outline-0" name="type" value="download">Download App</button>
-                            </form>
-
+                            <a href="<%- hot.download %>" class="btn btn-primary input-outline-0" name="type" value="download" target="_blank">Download App</a>
                             <a class="input-outline-0 btn btn-primary" name="type" value="read" href="/apps/<%- hot._id %>">Read More</a>
                         </div>
                     </div>
                 </div>
-            <% } %>
-
-            <% if(apps[1]) { %>
-                <p class="h4 fw-light d-flex justify-content-center mb-3 mt-3">What's trending?</p>
             <% } %>
 
             <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -41,10 +32,7 @@
                                 <p class="h5 card-title fw-light"><%- apps[key].name %></p>
                                 <p class="card-text"><%- apps[key].shortDescription %></p>
                                 <div class="card-footer mt-auto border-0 p-0" style="background: transparent;">
-                                    <form action="/api/apps/<%- apps[key]._id %>/download" method="post" class="mb-0 d-inline">
-                                        <button class="btn btn-primary input-outline-0" name="type" value="download">Download App</button>
-                                    </form>
-
+                                    <a href="<%- apps[key].download %>" class="btn btn-primary input-outline-0" name="type" value="download" target="_blank">Download App</a>
                                     <a class="input-outline-0 btn btn-primary" name="type" value="read" href="/apps/<%- apps[key]._id %>">Read More</a>
                                 </div>
                             </div>
