--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 
     <style type="text/css">
         body {
-            background: url("https://wallpaperaccess.com/full/4578310.jpg") no-repeat fixed center;
+            background: url("/images/bg.jpg") no-repeat fixed center;
         }
 
         .container {
@@ -29,7 +29,7 @@
 
             <form action="/api/auth" method="GET">
                 <button type="submit" class="btn btn-primary btn-block mt-3"><i class="fab fa-discord"></i> Login with Discord</button>
-                <p class="mt-1">or <a href="/">go home</a></p>
+                <p class="mt-1 text-black">or <a href="/">go home</a></p>
             </form>
         </div>
     </body>
