--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary static-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-none dark-theme static-top">
     <div class="container">
         <a class="navbar-brand fw-light" href="/">
             <img src="/images/polaros-bear.png" height="36">
@@ -26,52 +26,23 @@
 
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                         <% if(user) { %>
-                            <li><a class="dropdown-item">Hello, <%- user.username %></a></li>
+                            <li><a class="dropdown-item" href="/users/<%- user.discordId %>">Profile</a></li>
+                            <li><a class="dropdown-item" href="/users/<%- user.discordId %>/prefrences">Prefrences</a></li>
+                            <li><div class="dropdown-divider"></div></li>
+                            <li><a class="dropdown-item" href="/post-app">Post Application</a></li>
                         <% } else { %>
                             <li><a class="dropdown-item" href="/login">Login</a></li>
                         <% } %>
-                        <li><div class="dropdown-divider"></div></li>
-                        <li><a class="dropdown-item" href="/post-app">Post Application</a></li>
                     </ul>
                 </li>
 
                 <li class="nav-link">
-                    <i class="fas fa-sun" id="theme-switch"></i>
+                    <a class="fab fa-discord nav-link" href="https://discord.gg/6CHXe5xJq8"></a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-
-<script>
-    $(document).ready(() => {
-        if(Cookies.get('theme')) {
-            $('body').attr('theme', Cookies.get('theme'));
-        }
-
-        $('#theme-switch').on('click', () => {
-            $('#theme-switch').toggleClass('flip');
-            $('#theme-switch').toggleClass('fa-sun');
-            $('#theme-switch').toggleClass('fa-moon');
-
-            if($('body').attr('theme') == 'dark') {
-                $('body').attr('theme', 'light');
-                Cookies.set('theme', 'light');
-            } else {
-                $('body').attr('theme', 'dark');
-                Cookies.set('theme', 'dark');
-            }
-        });
-
-        $("body").contextmenu(function() {
-            return false;
-        });
-
-        $("img").mousedown(function(e) {
-            e.preventDefault();
-        });
-    });
-</script>
 
 <style>
     @media (max-width: 991px) {
