--- a/views/post-app.ejs
+++ b/views/post-app.ejs
@@ -3,7 +3,7 @@
 
     <style type="text/css">
         body {
-            background: url("https://wallpapercrafter.com/desktop/229428-dark-clouds-amassing-over-white-ridges-at-the-shor.jpg") no-repeat fixed center;
+            background: url("/images/bg.jpg") no-repeat fixed center;
         }
 
         .container {
@@ -18,16 +18,16 @@
     <body>
         <div class="text-center container position-absolute top-50 start-50 translate-middle" style="max-width: 480px; margin: auto;">
             <img src="/images/polaros-bear.png" height="50" class="mb-4 text-primary stroke">
-            
+
             <form action="/api/apps/post" method="POST" id="post">
                 <h2 class="mb-3 fw-bold text-primary">Post Application</h2>
                 <div class="input-group mb-1">
                     <label for="name" class="sr-only"></label>
-                    <input type="text" placeholder="Application Name" id="name" name="name" class="form-control" pattern="^[a-zA-Z0-9 ]+$" maxlength="24" required>
+                    <input type="text" placeholder="Application Name" id="name" name="name" class="form-control" maxlength="24" required>
 
                     <label for="version" class="sr-only"></label>
                     <span class="input-group-text" id="basic-addon1">v</span>
-                    <input type="text" placeholder="1.0.0" id="version" name="version" class="form-control" pattern="^[0-9.]+$" maxlength="5" required>
+                    <input type="text" placeholder="1.0.0" id="version" name="version" class="form-control" oninvalid="this.setCustomValidity('Please use the format \'x.x.x\' - if this wont submit, reload')" pattern="^[0-9.]+$" maxlength="5" required>
                 </div>
 
                 <label for="shortDescription" class="sr-only"></label>
@@ -37,7 +37,7 @@
                 <textarea placeholder="Long Description (max. 1500)" maxlength="1500" id="longDescription" name="longDescription" class="form-control mb-1" style="resize: none;" required></textarea>
 
                 <label for="download" class="sr-only"></label>
-                <input type="text" placeholder="Download Link (must be a zip file)" id="download" name="download" class="form-control mb-1" required>
+                <input type="text" placeholder="Download Link" id="download" name="download" class="form-control mb-1" oninvalid="this.setCustomValidity('Please use a link - if this wont submit, reload')" pattern="https://.*" required>
 
                 <label for="icon" class="sr-only"></label>
                 <input type="text" placeholder="Banner image link (optional)" id="icon" name="icon" class="form-control mb-1">
@@ -47,7 +47,7 @@
                     <option value="">Compatible with...</option>
                     <option value="PolarOS">PolarOS</option>
                 </select>
-                
+
                 <div class="input-group mb-1">
                     <label for="category"></label>
 
@@ -85,12 +85,12 @@
                 </select>
 
                 <button type="submit" class="btn btn-primary btn-block mt-3">Post App</button>
-                <p>or <a href="/">go home</a></p>
+                <p class="text-black">or <a href="/">go home</a></p>
             </form>
 
             <div id="success" style="display: none;">
                 <h4 class="mb-3 fw-bold text-primary">Your post has been published!</h4>
-                <p>Thank you for using PolarStore. Click <a href="/">here</a> to go back home.</p>
+                <p class="text-black">Thank you for using PolarStore. Click <a href="/">here</a> to go back home.</p>
             </div>
         </div>
     </body>
@@ -108,11 +108,11 @@
 <script>
     function escapeHtml(unsafe) {
         return unsafe
-             .replace(/&/g, "&amp;")
-             .replace(/</g, "&lt;")
-             .replace(/>/g, "&gt;")
-             .replace(/"/g, "&quot;")
-             .replace(/'/g, "&#039;");
+            .replace(/&/g, "&amp;")
+            .replace(/</g, "&lt;")
+            .replace(/>/g, "&gt;")
+            .replace(/"/g, "&quot;")
+            .replace(/'/g, "&#039;");
     }
 
     $('textarea[maxlength], #shortDescription').maxlength({
@@ -130,7 +130,7 @@
         $('#shortDescription').val(escapeHtml($('#shortDescription').val()));
         $('#longDescription').val(escapeHtml($('#longDescription').val()));
         $('#icon').val(escapeHtml($('#icon').val()));
-        
+
         $('#longDescription').val($('#longDescription').val().replace(/\r\n|\r|\n/g, '<br>'));
     });
 </script>
